[gd_scene format=3 uid="uid://dap8s2l3v5j6m"]

[ext_resource type="Script" uid="uid://d0mvh7wnrk7fj" path="res://scripts/menu_Principal.gd" id="1_4k9x2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 30.0
content_margin_top = 20.0
content_margin_right = 30.0
content_margin_bottom = 20.0
bg_color = Color(0.12549, 0.290196, 0.533333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.219608, 0.458824, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.188235, 0.439216, 0.803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.34902, 0.67451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.227451, 0.52549, 0.94902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.415686, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MenuInicio" type="Control" unique_id=1323899886]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4k9x2")

[node name="Fondo" type="ColorRect" parent="." unique_id=631082578]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.96, 0.98, 1)

[node name="ContenedorPrincipal" type="VBoxContainer" parent="." unique_id=1079622644]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="TituloPanel" type="Panel" parent="ContenedorPrincipal" unique_id=615106260]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Titulo" type="Label" parent="ContenedorPrincipal/TituloPanel" unique_id=263588120]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -186.0
offset_right = -28.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "SISTEMA DE GESTIÓN DE CALIDAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonesContainer" type="GridContainer" parent="ContenedorPrincipal" unique_id=1716788064]
layout_mode = 2
columns = 2

[node name="BtnAdministrarUsuarios" type="Button" parent="ContenedorPrincipal/BotonesContainer" unique_id=57398083]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "ADMINISTRAR USUARIOS"

[node name="BtnGestorQuejas" type="Button" parent="ContenedorPrincipal/BotonesContainer" unique_id=1302739966]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "GESTOR DE QUEJAS"

[node name="BtnRegistrarIncidencia" type="Button" parent="ContenedorPrincipal/BotonesContainer" unique_id=1975044762]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "REGISTRAR INCIDENCIA"

[node name="BtnRegistrarNCAuditoria" type="Button" parent="ContenedorPrincipal/BotonesContainer" unique_id=2043770165]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "REGISTRAR NC AUDITORÍA"

[node name="BtnSalir" type="Button" parent="ContenedorPrincipal" unique_id=453007244]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.15, 0.15, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "SALIR DEL SISTEMA"

[node name="Footer" type="Panel" parent="." unique_id=488023435]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 750.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="FooterText" type="Label" parent="Footer" unique_id=1443181689]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 12
text = "Sistema de Gestión de Calidad v1.0 © 2024"
horizontal_alignment = 1
vertical_alignment = 1
